--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,20 @@
 fastapi==0.104.1
 uvicorn==0.24.0
 sqlalchemy==2.0.23
-psycopg2-binary==2.9.9
 alembic==1.12.1
+psycopg2-binary==2.9.9
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
-redis==5.0.1
-celery==5.3.4
-python-telegram-bot==20.7
-pydantic==2.5.0
-pydantic-settings==2.1.0
-email-validator==2.1.0
-python-i18n==0.3.9
-httpx==0.25.2
-aiofiles==23.2.1
 python-dateutil==2.8.2
+pydantic[email]==2.5.0
+pydantic-settings==2.1.0
+celery==5.3.4
+redis==5.0.1
+requests==2.31.0
+email-validator==2.1.0
+python-dotenv==1.0.0
+aiofiles==23.2.1
+jinja2==3.1.2
+pillow==10.1.0
+bcrypt==4.1.2
