--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -1,8 +1,26 @@
+# CyberCTF Arena - Nginx Configuration for Ubuntu 24.04
+
+user www-data;
+worker_processes auto;
+pid /run/nginx.pid;
+include /etc/nginx/modules-enabled/*.conf;
+
 events {
     worker_connections 1024;
+    multi_accept on;
+    use epoll;
 }
 
 http {
+    # Basic Settings
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+    server_tokens off;
+
+    # MIME Types
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
@@ -12,78 +30,60 @@ http {
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
     access_log /var/log/nginx/access.log main;
-    error_log /var/log/nginx/error.log;
-
-    # Basic Settings
-    sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 65;
-    types_hash_max_size 2048;
+    error_log /var/log/nginx/error.log warn;
 
     # Gzip Settings
     gzip on;
     gzip_vary on;
-    gzip_min_length 1024;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types
+        application/atom+xml
+        application/javascript
+        application/json
+        application/ld+json
+        application/manifest+json
+        application/rss+xml
+        application/vnd.geo+json
+        application/vnd.ms-fontobject
+        application/x-font-ttf
+        application/x-web-app-manifest+json
+        application/xhtml+xml
+        application/xml
+        font/opentype
+        image/bmp
+        image/svg+xml
+        image/x-icon
+        text/cache-manifest
+        text/css
+        text/plain
+        text/vcard
+        text/vnd.rim.location.xloc
+        text/vtt
+        text/x-component
+        text/x-cross-domain-policy;
 
-    # CyberCTF Arena Configuration
-    server {
-        listen 80;
-        server_name _;
-        client_max_body_size 100M;
+    # Security Headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header Referrer-Policy "no-referrer-when-downgrade" always;
+    add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
 
-        # Frontend
-        location / {
-            root /home/cyberctf/cyberctf-arena/frontend;
-            try_files $uri $uri/ /index.html;
-            index index.html;
-            
-            # Security headers
-            add_header X-Frame-Options "SAMEORIGIN" always;
-            add_header X-XSS-Protection "1; mode=block" always;
-            add_header X-Content-Type-Options "nosniff" always;
-        }
+    # Rate Limiting
+    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=auth:10m rate=5r/m;
 
-        # API
-        location /api/ {
-            proxy_pass http://localhost:8000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Timeouts
-            proxy_connect_timeout 30s;
-            proxy_send_timeout 30s;
-            proxy_read_timeout 30s;
-        }
+    # File Upload Size
+    client_max_body_size 10M;
 
-        # Health check
-        location /health {
-            proxy_pass http://localhost:8000/health;
-            proxy_set_header Host $host;
-            access_log off;
-        }
-
-        # API Documentation
-        location /docs {
-            proxy_pass http://localhost:8000/docs;
-            proxy_set_header Host $host;
-        }
-
-        # Static files
-        location /static/ {
-            alias /home/cyberctf/cyberctf-arena/backend/static/;
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-        }
-
-        # Security
-        location ~ /\. {
-            deny all;
-            access_log off;
-            log_not_found off;
-        }
+    # Upstream for Backend
+    upstream ctf_backend {
+        server 127.0.0.1:8000;
+        keepalive 32;
     }
+
+    # Include site configurations
+    include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/sites-enabled/*;
 }
