--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,114 @@
 version: '3.8'
 
 services:
-  backend:
-    build: .
-    ports:
-      - "8000:8000"
+  # PostgreSQL Database
+  postgres:
+    image: postgres:15
+    container_name: ctf_postgres
     environment:
-      - DATABASE_URL=postgresql://user:password@db:5432/cyberctf
-      - REDIS_URL=redis://redis:6379/0
-    depends_on:
-      - db
-      - redis
-    volumes:
-      - ./frontend:/app/frontend
-
-  db:
-    image: postgres:13
-    environment:
-      - POSTGRES_DB=cyberctf
-      - POSTGRES_USER=user
-      - POSTGRES_PASSWORD=password
+      POSTGRES_DB: ctfarena
+      POSTGRES_USER: ctfuser
+      POSTGRES_PASSWORD: ctfpassword
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./backups:/backups
+    ports:
+      - "5432:5432"
+    networks:
+      - ctf-network
+    restart: unless-stopped
 
+  # Redis for Celery
   redis:
     image: redis:7-alpine
+    container_name: ctf_redis
+    ports:
+      - "6379:6379"
+    networks:
+      - ctf-network
+    restart: unless-stopped
 
+  # Backend API
+  backend:
+    build: ./backend
+    container_name: ctf_backend
+    environment:
+      - DATABASE_URL=postgresql://ctfuser:ctfpassword@postgres:5432/ctfarena
+      - REDIS_URL=redis://redis:6379/0
+      - SECRET_KEY=your-production-secret-key-change-this
+    ports:
+      - "8000:8000"
+    depends_on:
+      - postgres
+      - redis
+    volumes:
+      - ./uploads:/app/uploads
+      - ./logs:/app/logs
+    networks:
+      - ctf-network
+    restart: unless-stopped
+    command: >
+      sh -c "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
+
+  # Celery Worker
+  celery_worker:
+    build: ./backend
+    container_name: ctf_celery_worker
+    environment:
+      - DATABASE_URL=postgresql://ctfuser:ctfpassword@postgres:5432/ctfarena
+      - REDIS_URL=redis://redis:6379/0
+    depends_on:
+      - postgres
+      - redis
+    volumes:
+      - ./uploads:/app/uploads
+      - ./logs:/app/logs
+    networks:
+      - ctf-network
+    restart: unless-stopped
+    command: celery -A app.tasks.celery worker --loglevel=info
+
+  # Celery Beat
+  celery_beat:
+    build: ./backend
+    container_name: ctf_celery_beat
+    environment:
+      - DATABASE_URL=postgresql://ctfuser:ctfpassword@postgres:5432/ctfarena
+      - REDIS_URL=redis://redis:6379/0
+    depends_on:
+      - postgres
+      - redis
+    volumes:
+      - ./uploads:/app/uploads
+      - ./logs:/app/logs
+    networks:
+      - ctf-network
+    restart: unless-stopped
+    command: celery -A app.tasks.celery beat --loglevel=info
+
+  # Nginx for Ubuntu 24.04
   nginx:
-    image: nginx:alpine
+    image: nginx:1.24-alpine
+    container_name: ctf_nginx
     ports:
       - "80:80"
+      - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./deploy/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./frontend:/usr/share/nginx/html:ro
+      - ./backend/static:/static:ro
+      - ./uploads:/uploads:ro
+      - ./ssl:/etc/nginx/ssl:ro
     depends_on:
       - backend
+    networks:
+      - ctf-network
+    restart: unless-stopped
 
 volumes:
   postgres_data:
+    driver: local
+
+networks:
+  ctf-network:
+    driver: bridge
