--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,7 +7,7 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 python-dateutil==2.8.2
-pydantic[email]==2.5.0
+pydantic==2.5.0
 pydantic-settings==2.1.0
 celery==5.3.4
 redis==5.0.1
@@ -17,4 +17,5 @@ python-dotenv==1.0.0
 aiofiles==23.2.1
 jinja2==3.1.2
 pillow==10.1.0
-bcrypt==4.1.2
+bcrypt==4.1.1
+cryptography==41.0.7
