--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,7 @@
+# Создайте файл /opt/ctf-arena/backend/requirements_fixed.txt
+cd /opt/ctf-arena/backend
+
+cat > requirements_fixed.txt << 'EOF'
 fastapi==0.104.1
 uvicorn==0.24.0
 sqlalchemy==2.0.23
@@ -12,10 +16,11 @@ pydantic-settings==2.1.0
 celery==5.3.4
 redis==5.0.1
 requests==2.31.0
-email-validator==2.1.0
 python-dotenv==1.0.0
 aiofiles==23.2.1
 jinja2==3.1.2
 pillow==10.1.0
-bcrypt==4.1.1
 cryptography==41.0.7
+dnspython>=2.0.0
+email-validator==2.1.0
+EOF
