--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,114 +1,92 @@
 version: '3.8'
 
 services:
-  # PostgreSQL Database
   postgres:
     image: postgres:15
-    container_name: ctf_postgres
     environment:
-      POSTGRES_DB: ctfarena
-      POSTGRES_USER: ctfuser
-      POSTGRES_PASSWORD: ctfpassword
+      POSTGRES_DB: ctf_platform
+      POSTGRES_USER: ctf_user
+      POSTGRES_PASSWORD: ctf_password
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./backups:/backups
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432:5432"
-    networks:
-      - ctf-network
-    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ctf_user -d ctf_platform"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
-  # Redis for Celery
   redis:
     image: redis:7-alpine
-    container_name: ctf_redis
     ports:
       - "6379:6379"
-    networks:
-      - ctf-network
-    restart: unless-stopped
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
-  # Backend API
   backend:
     build: ./backend
-    container_name: ctf_backend
-    environment:
-      - DATABASE_URL=postgresql://ctfuser:ctfpassword@postgres:5432/ctfarena
-      - REDIS_URL=redis://redis:6379/0
-      - SECRET_KEY=your-production-secret-key-change-this
     ports:
       - "8000:8000"
-    depends_on:
-      - postgres
-      - redis
-    volumes:
-      - ./uploads:/app/uploads
-      - ./logs:/app/logs
-    networks:
-      - ctf-network
-    restart: unless-stopped
-    command: >
-      sh -c "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
-
-  # Celery Worker
-  celery_worker:
-    build: ./backend
-    container_name: ctf_celery_worker
     environment:
-      - DATABASE_URL=postgresql://ctfuser:ctfpassword@postgres:5432/ctfarena
-      - REDIS_URL=redis://redis:6379/0
+      - DATABASE_URL=postgresql://ctf_user:ctf_password@postgres:5432/ctf_platform
+      - REDIS_URL=redis://redis:6379
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
     depends_on:
-      - postgres
-      - redis
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     volumes:
       - ./uploads:/app/uploads
-      - ./logs:/app/logs
-    networks:
-      - ctf-network
-    restart: unless-stopped
-    command: celery -A app.tasks.celery worker --loglevel=info
 
-  # Celery Beat
-  celery_beat:
+  celery:
     build: ./backend
-    container_name: ctf_celery_beat
+    command: celery -A app.workers.tasks.celery_app worker --loglevel=info
     environment:
-      - DATABASE_URL=postgresql://ctfuser:ctfpassword@postgres:5432/ctfarena
-      - REDIS_URL=redis://redis:6379/0
+      - DATABASE_URL=postgresql://ctf_user:ctf_password@postgres:5432/ctf_platform
+      - REDIS_URL=redis://redis:6379
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
     depends_on:
-      - postgres
-      - redis
-    volumes:
-      - ./uploads:/app/uploads
-      - ./logs:/app/logs
-    networks:
-      - ctf-network
-    restart: unless-stopped
-    command: celery -A app.tasks.celery beat --loglevel=info
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
 
-  # Nginx for Ubuntu 24.04
+  celery-beat:
+    build: ./backend
+    command: celery -A app.workers.tasks.celery_app beat --loglevel=info
+    environment:
+      - DATABASE_URL=postgresql://ctf_user:ctf_password@postgres:5432/ctf_platform
+      - REDIS_URL=redis://redis:6379
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+
   nginx:
-    image: nginx:1.24-alpine
-    container_name: ctf_nginx
+    image: nginx:alpine
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./deploy/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./frontend:/usr/share/nginx/html:ro
-      - ./backend/static:/static:ro
-      - ./uploads:/uploads:ro
-      - ./ssl:/etc/nginx/ssl:ro
+      - ./nginx/conf.d:/etc/nginx/conf.d
+      - ./frontend/dist:/usr/share/nginx/html
+      - ./ssl:/etc/nginx/ssl
     depends_on:
       - backend
-    networks:
-      - ctf-network
-    restart: unless-stopped
 
 volumes:
   postgres_data:
-    driver: local
-
-networks:
-  ctf-network:
-    driver: bridge
+  redis_data:
